<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue_light"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/btnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/lugares_turisticos">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnMap"
        android:padding="20dp">

        <RelativeLayout
            android:id="@+id/Chanchan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/Img_1"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/chan_chan"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/Location"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/Img_1"
                android:src="@drawable/baseline_location_on_24" />

            <TextView
                android:id="@+id/Name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/Location"
                android:layout_below="@id/Img_1"
                android:textSize="25sp"
                android:text="@string/chan_chan"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Description_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:maxLines="4"
                android:textColor="@color/black"
                android:layout_below="@id/Location"
                android:text="@string/description_chan_chan"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Sipan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@id/Chanchan">

            <ImageView
                android:id="@+id/Img_2"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/sipan"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/Location_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/Img_2"
                android:src="@drawable/baseline_location_on_24" />

            <TextView
                android:id="@+id/Name_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/Location_2"
                android:layout_below="@id/Img_2"
                android:textSize="25sp"
                android:text="@string/sipan"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Description_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:maxLines="4"
                android:textColor="@color/black"
                android:layout_below="@id/Location_2"
                android:text="@string/description_sipan"/>

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>

</ScrollView>